# tallyaero-overlay

./: .gitignore  BUILD.md  CLAUDE_CONTEXT.md  Lessons_learned.md  MANEUVER_STANDARD.md  Makefile  Master prompt and context.md  NEXT_TASK.md  OVERLAY_TOOL_EXECUTION_PLAN.md  PROJECT_ANALYSIS.md  aeroedge_tracker.py  aircraft_data  airports  app.py  edit_aircraft_page.py  pyproject.toml  requirements.txt  tallyaero_em.spec  utility.py  wsgi.py
aircraft_data/: Aeronca_Champ.json  Aeronca_Chief.json  American_Champion_Citabria.json  American_Champion_Decathlon.json  American_Champion_Scout.json  Aviat Husky A-1C.json  Beechcraft_Baron_58.json  Beechcraft_Bonanza_A36.json  Beechcraft_Bonanza_F33.json  Beechcraft_Musketeer.json  Beechcraft_Sierra.json  Beechcraft_Sundowner.json  Bellanca_Super_Viking.json  (+98 more)
tools/em/: .gitignore  .gitignore.rtf  .gitmodules  EM_DIAGRAM_EXECUTION_PLAN.md  PHYSICS_AUDIT_PLAN.md  aircraft_data  airports  app.py  conftest.py  em_root_components.py  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  sitemap.xml  tallyaero_em.spec
tools/em/assets/: export.js  tokens.css
tools/em/callbacks/: edit_aircraft.py  environment.py  export.py  figure.py  figure_hv.py  main.py  modals.py  navigation.py  overlays.py  ui_toggles.py
tools/em/components/: __init__.py
tools/em/core/: __init__.py  aircraft_loader.py  calculations.py  logging_setup.py  plotly_themes.py  schema.py  vyse.py
tools/em/data/scrapers/: build_airports.py  classify_thrust_models.py
tools/em/data/sources/tcds_parsed/: 1A2.json  1A6.json  2A13.json  2A8.json  3A12.json  3A15.json  3A16.json  3A19.json  5A2.json  5A6.json  A-698.json  A-703.json  A-759.json  A-768.json  A-777.json  A25SO.json  A3SO.json  EASA-A232-PA44.json  EASA-IM-A223-DA20.json  EASA-IM-R120-R22.json  EASA-IM-R121-R44.json  EASA-R66.json
tools/em/docs/: aircraft_data_triage.csv  callback_audit.md  legacy_tcds_urls.json  missing_tcds.json  reconciliation_report.csv  tcds_mapping.csv  tcds_mapping.json  vne_unit_research.json
tools/em/em_callbacks/: __init__.py  environment.py  figure_hv.py  navigation.py  overlays.py  ui_toggles.py
tools/em/em_core/: aircraft_loader.py  constants.py  logging_setup.py  vmca.py
tools/em/em_data/scrapers/: download_tcds.py  reconcile_tcds.py
tools/em/em_data/sources/tcds_parsed/: 1A1.json  1A4.json  2A3.json  3A13.json  3A23.json  3A24.json  A-2700.json  A-691.json  A-692.json  A-725.json  A-761.json  A-780.json  A-797.json  A-799.json  A-800.json  A-805.json  A16EA.json  A21CE.json  A24CE.json  A7CE.json  A7SO.json  EASA-A022-DA40.json  EASA-A239-PA32.json  EASA-IM-A629-DA62.json
tools/em/em_layouts/: desktop.py  mobile.py
tools/em/layouts/: __init__.py  desktop.py  edit_aircraft.py  mobile.py
tools/em/pages/: __init__.py
tools/em/scripts/: audit_vspeed_units.py  build_dmg.sh  build_icons.sh  fix_vspeed_units.py  fix_vspeed_units_ext.py  sync_check.py  verify_vspeed_units.py
tools/em/services/: weather.py
tools/em/tests/: __init__.py  test_callbacks.py  test_compare.py  test_core.py  test_energy_state.py  test_jsons.py  test_loader.py  test_scenarios.py  test_vmc.py  test_vyse.py  test_weather.py
tools/em/tests/snapshots/test_scenarios/test_envelope_snapshot/172p_4000ft_warm_day/: 172p_4000ft_warm_day.json
tools/em/tests/snapshots/test_scenarios/test_envelope_snapshot/baron58_8000ft_oei_feathered/: baron58_8000ft_oei_feathered.json
tools/em/tests/snapshots/test_scenarios/test_envelope_snapshot/cap232_sl_isa_aerobatic/: cap232_sl_isa_aerobatic.json
(+191 files in other folders)
